# artisan

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  artisan.1  build.rs  default.nix  shell.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yaml  task.yaml  umbrella.yaml
.github/workflows/: ci.yml
completions/: _artisan  artisan.bash
crates/artisan_config/: Cargo.toml  README.md
crates/artisan_core/: Cargo.toml  README.md
crates/artisan_template/: Cargo.toml  README.md
crates/artisan_template/src/: lib.rs
docs/: installation.md
media/: banner.fig  media.fig
nix/: nixpkgs.nix
src/: cli.rs  cmds.rs  config.rs  context.rs  error.rs  lib.rs  macros.rs  main.rs  options.rs  template.rs  utils.rs
src/cmds/: init.rs  license.rs  mod.rs  new.rs  todo.rs
src/commands/: mod.rs  new.rs
src/ops/: config.rs  global.rs  init.rs  mod.rs  new.rs
src/template/: mod.rs
templates/: default.toml
