[package]
name = "artisan"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.5", features = ["derive"] }
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
ansi_term = "0.12.1"
liquid = "0.26.0"
