[package]
name = "artisan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
inquire = "0.6.2"
serde = { version = "1.0.166", features = ["derive"] }
tera = "1.19.0"
toml = "0.7.6"
